--- a/index.html
+++ b/index.html
@@ -85,32 +85,32 @@
       <section class="images">
         <div class="product__gallery">
           <div class="stage">
-            <button onclick="openLightBox('lighthbox_dialog',this)" class="stage__img--active"
+            <button onclick="openLightBox('lighthbox_dialog',this)" class="stage--active jsPgStage"
               data-curr_img="image-product-1.jpg">
               <img src="./images/image-product-1.jpg" alt="product 1 image" />
             </button>
-            <button class="stage__img--prev" aria-label="previous image">
+            <button class="stage--previous jsPgStagePrev" aria-label="previous image">
               <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg" focusable="false">
                 <path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" />
               </svg>
             </button>
-            <button class="stage__img--next" aria-label="next image">
+            <button class="stage--next jsPgStageNext" aria-label="next image">
               <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg" focusable="false">
                 <path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" />
               </svg>
             </button>
           </div>
           <div class="altimages">
-            <button class="item active" data-fullimageurl="image-product-1.jpg">
+            <button class="item active jsPgItem" data-fullimageurl="image-product-1.jpg" data-idx="0">
               <img src="./images/image-product-1-thumbnail.jpg" alt="product 1 thumbnail image" />
             </button>
-            <button class="item" data-fullimageurl="image-product-2.jpg">
+            <button class="item jsPgItem" data-fullimageurl="image-product-2.jpg" data-idx="1">
               <img src="./images/image-product-2-thumbnail.jpg" alt="product 2 thumbnail image" />
             </button>
-            <button class="item" data-fullimageurl="image-product-3.jpg">
+            <button class="item jsPgItem" data-fullimageurl="image-product-3.jpg" data-idx="2">
               <img src="./images/image-product-3-thumbnail.jpg" alt="product 3 thumbnail image" />
             </button>
-            <button class="item" data-fullimageurl="image-product-4.jpg">
+            <button class="item jsPgItem" data-fullimageurl="image-product-4.jpg" data-idx="3">
               <img src="./images/image-product-4-thumbnail.jpg" alt="product 4 thumbnail image" />
             </button>
           </div>
@@ -164,40 +164,40 @@
   <div id="modalRoot">
     <div id="lighthbox_dialog" role="dialog" aria-label="product gallery lightbox" aria-modal="true" class="hidden">
       <div class="lightbox">
-        <button class="lightbox__close-btn" onclick="closeDialog(this)" aria-label="close light box">
+        <button class="close-btn jsLbCloseBtn" onclick="closeDialog(this)" aria-label="close light box">
           <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg" focusable="false">
             <path
               d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z"
               fill="#69707D" fill-rule="evenodd" />
           </svg>
         </button>
-        <div class="lightbox__preview">
-          <img src="./images/image-product-1.jpg" alt="product 1 preview 1" class="js-lightbox-preview" />
-          <button class="lightbox__preview--previous" aria-label="previous image">
+        <div class="stage">
+          <img src="./images/image-product-1.jpg" alt="product 1 preview 1" class="stage--active jsLbStage" />
+          <button class="stage--previous jsLbStagePrev" aria-label="previous image">
             <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg" focusable="false">
               <path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" />
             </svg>
           </button>
-          <button class="lightbox__preview--next" aria-label="next image">
+          <button class="stage--next jsLbStageNext" aria-label="next image">
             <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg" focusable="false">
               <path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd" />
             </svg>
           </button>
         </div>
-        <div class="lightbox__gallery">
-          <button class="lightbox__gallery__item active">
+        <div class="altimages">
+          <button class="item active jsLbItem" data-fullimageurl="image-product-1.jpg" data-idx="0">
             <img src="./images/image-product-1-thumbnail.jpg" alt="product 1 thumbnail image 1" />
             <span class="overlay"></span>
           </button>
-          <button class="lightbox__gallery__item">
+          <button class="item jsLbItem" data-fullimageurl="image-product-2.jpg" data-idx="1">
             <img src="./images/image-product-2-thumbnail.jpg" alt="product 2 thumbnail image 2" />
             <span class="overlay"></span>
           </button>
-          <button class="lightbox__gallery__item">
+          <button class="item jsLbItem" data-fullimageurl="image-product-3.jpg" data-idx="2">
             <img src="./images/image-product-3-thumbnail.jpg" alt="product 3 thumbnail image 3" />
             <span class="overlay"></span>
           </button>
-          <button class="lightbox__gallery__item">
+          <button class="item jsLbItem" data-fullimageurl="image-product-4.jpg" data-idx="3">
             <img src="./images/image-product-4-thumbnail.jpg" alt="product 4 thumbnail image 4" />
             <span class="overlay"></span>
           </button>
@@ -206,6 +206,7 @@
     </div>
   </div>
   </div>
+  <script src="./js/utils.js"></script>
   <script src="./js/dialog.js"></script>
   <script src="./js/lightbox.js"></script>
   <script src="./js/index.js"></script>
