--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="container">
             <div class="quant__adder">
               <button class="quant__adder--minus" aria-label="add 1 Fall Limited Edition Sneakers to cart"></button>
-              <span aria-label="Quanity of Fall Limited Edition Sneakers">3</span>
+              <span><span class="sr-only">Quanity</span>3 </span>
               <button class="quant__adder--plus" aria-label="remove 1 Fall Limited Edition Sneakers from cart"></button>
             </div>
           </div>
